--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Dive into the vibrant Chemistry Community, where enthusiasts and professionals connect, share knowledge, and advance the field of chemistry together.">
 
  <meta name="robots" content="index,follow"> 
-  <link rel="canonical" href="https://community.pages.dev">
+  <link rel="canonical" href="https://chemistrycommunity.pages.dev">
   
   <style>
     body {
